# 0_rust_pbr

./: .gitignore  Cargo.toml  README.md  mi_file.txt
custom_PRNG_halton/: otromod.rs
metropolis_integrator_test/: bdpt_disk_spp_1024_w910_h512_depth1_info.json  bdpt_disk_spp_1_w910_h512_depth1  bdpt_disk_spp_1_w910_h512_depth1_info.json  bdpt_disk_spp_512_w910_h512_depth1_info.json  path_tracer1_spp_4096_w910_h512_depth1_info.json
mi_test/: test_main.rs
render1test/: bdpt_disk_spp_1024_w910_h512_depth1  bdpt_disk_spp_1_w14_h8_depth1  bdpt_disk_spp_1_w14_h8_depth1_info.json  bdpt_disk_spp_1_w227_h128_depth1  bdpt_disk_spp_1_w227_h128_depth1_info.json  bdpt_disk_spp_1_w56_h32_depth1  bdpt_disk_spp_1_w56_h32_depth1_info.json  bdpt_disk_spp_32_w227_h128_depth1  bdpt_disk_spp_32_w227_h128_depth1_info.json  bdpt_disk_spp_32_w910_h512_depth1_info.json  mipng__info.json  mlt_disk_spp_10_w128_h128_depth1  mlt_disk_spp_10_w16_h16_depth1  mlt_disk_spp_10_w512_h512_depth1  mlt_disk_spp_10_w64_h64_depth1  mlt_disk_spp_10_w8_h8_depth1  path_tracer1__info.json  path_tracer1_spp_4096_w910_h512_depth1  path_tracer_disk_spp_4096_w910_h512_depth1  path_tracer_disk_spp_4096_w910_h512_depth1_info.json
render2test/: bdpt_cyl_2_emiteddirect_spp_2048_w910_h512_depth1  bdpt_disk_1_spp_512_w455_h256_depth1  bdpt_disk_2_emiteddirect_spp_1024_w910_h512_depth1  bdpt_disk_2_emiteddirect_spp_1024_w910_h512_depth1_info.json  bdpt_disk_2_emiteddirect_spp_128_w455_h256_depth1_info.json  bdpt_disk_2_emiteddirect_spp_512_w455_h256_depth1  bdpt_disk_2_emiteddirect_spp_512_w455_h256_depth1_info.json  (+12 more)
(+36 files in other folders)
