[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



 






[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
actix-web = "4.2.1"
actix-rt = "2.7"
serde_json = "1.0.87"
piston-float = "1.0.0"
image = "0.24.5"
num-traits = "0.2"
rand = "0.8.5"
rayon = "1"
palette = "0.6.1"
cgmath ="*"