[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



 #permite hacer deebug y test usando las optimizaciones del asm
 #https://stackoverflow.com/questions/34054669/how-to-compile-and-run-an-optimized-rust-program-with-overflow-checking-enabled
[profile.dev]
# opt-level = 3





[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
actix-web = "4.2.1"
actix-rt = "2.7"
serde_json = "1.0.87"
piston-float = "1.0.0"
image = "0.24.5"
num-traits = "0.2"
rand = "0.8.5"
rayon = "1"
palette = "0.6.1"
cgmath ="*"
itertools="*"
hexf = "0.2.1"
num = "0.4.0"
once_cell = "1.17.1"